Refs #21467; lowered padding value of googlechart-share in order to avoid iframe border movement when div is visible

--- a/eea/googlecharts/views/css/embed.css
+++ b/eea/googlecharts/views/css/embed.css
@@ -72,7 +72,7 @@ a:visited, a:hover {
 }
 
 .googlechart-share {
-    padding: 0.7em;
+    padding: 0.5em;
     display: block;
     float:right;
 }
